kubernetes/kubernetes-yamls/notes-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: notes-service
  name: notes-service
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: notes-service
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/notes-app-app-network: "true"
        io.kompose.service: notes-service
    spec:
      containers:
        - env:
            - name: DB_HOST
              value: mysql
            - name: DB_NAME
              value: notes_db
            - name: DB_PASSWORD
              value: password
            - name: DB_USER
              value: root
          image: ram1uj/notes-app-notes-service
          name: notes-service
          ports:
            - containerPort: 8100
          resources: {}
      restartPolicy: Always
status: {}
