kubernetes/kubernetes-yamls/notes-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: notes-service
  name: notes-service
spec:
  type: LoadBalancer
  ports:
    - name: "8100"
      port: 8100
      targetPort: 8100
      nodePort: 30010
  selector:
    io.kompose.service: notes-service
status:
  loadBalancer: {}
