kubernetes/kubernetes-yamls/user-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: user-service
  name: user-service
spec:
  type: NodePort
  ports:
    - name: "8200"
      port: 8200
      targetPort: 8200
      nodePort: 30020
  selector:
    io.kompose.service: user-service
status:
  loadBalancer: {}
